.circleci/kubernetes-prod/webserver/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
